# Causal-Inference-Toolkit-for-Product-Metrics

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
causal_toolkit/: __init__.py  api.py  data.py  diagnostics.py  placebo.py  report.py
causal_toolkit/estimators/: __init__.py  base.py  bsts.py  did.py  synthetic_control.py
dashboard/: app.py
examples/: generate_readme_assets.py  run_demo.py
reports/: comparison_report.html
tests/: test_api.py  test_data.py  test_diagnostics.py  test_estimators.py  test_placebo.py  test_report.py  test_validation_extras.py
